--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
         <activity
             android:name=".TargetActivity"
+            android:screenOrientation="landscape"
             android:label="@string/app_name">
 
             <intent-filter>
